--- a/phonebook-spa/appsettings.json
+++ b/phonebook-spa/appsettings.json
@@ -1,10 +1,13 @@
 {
   "Logging": {
-      "LogLevel": {
+    "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
-      }
-    },
-"AllowedHosts": "*"
+    }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=(localdb)\\mssqllocaldb;Initial Catalog=PhoneBookDb;Integrated Security=True;MultipleActiveResultSets=True"
+  }
 }
