feat(spec-pattern): Adds repository layer
- Uses the specification pattern to avoid pitfalls of generic repository, and for future proofing
- Unit test for the updated get request with xUnit project

--- a/phonebook-infrastructure/phonebook-infrastructure.csproj
+++ b/phonebook-infrastructure/phonebook-infrastructure.csproj
@@ -12,7 +12,7 @@
     <TargetFramework>net6.0</TargetFramework>
     <RootNamespace>phonebook_infrastructure</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
+    <Nullable>disable</Nullable>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.3" />
