feat(ui): Updates UI with list and create dialog
- Uses material UI for components
- Lists items with edit and delete buttons (not wired up yet)

--- a/phonebook-spa/Properties/launchSettings.json
+++ b/phonebook-spa/Properties/launchSettings.json
@@ -11,7 +11,7 @@
     "phonebook_spa": {
       "commandName": "Project",
       "launchBrowser": true,
-      "applicationUrl": "http://localhost:5011",
+      "applicationUrl": "https://localhost:7118;http://localhost:5011",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
         "ASPNETCORE_HOSTINGSTARTUPASSEMBLIES": "Microsoft.AspNetCore.SpaProxy"
