--- a/phonebook-spa/appsettings.json
+++ b/phonebook-spa/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=(localdb)\\mssqllocaldb;Initial Catalog=PhoneBookDb;Integrated Security=True;MultipleActiveResultSets=True"
+    "DefaultConnection": "Data Source=localhost;Initial Catalog=PhoneBookDb;Integrated Security=True;MultipleActiveResultSets=True;Trust Server Certificate=true"
   }
 }
